# midiometry

./: Cargo.toml  README.md  bundler.toml
.github/workflows/: build.yml
gui/: bun.lockb  next.config.ts  package.json  tsconfig.json
gui/app/: globals.css  index.ts  layout.tsx  page.tsx
src/: editor.rs  lib.rs
